@@ -1,0 +1,3 @@
+.arch-ids
+Makefile
+mkmf.log
